fix: stretch ExternalInput button to fill container

--- a/packages/core/components/ExternalInput/styles.module.css
+++ b/packages/core/components/ExternalInput/styles.module.css
@@ -17,6 +17,7 @@
   text-overflow: ellipsis;
   position: relative;
   overflow: hidden;
+  flex-grow: 1;
 }
 
 .ExternalInput-button:hover,
